// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<table
  className="cf-table cf-table--bordered cf-table--responsive"
>
  Table
</table>
`;

exports[`should render condensed 1`] = `
<table
  className="cf-table cf-table--bordered cf-table--responsive cf-table--condensed"
>
  Table
</table>
`;

exports[`should render extra class names 1`] = `
<table
  className="cf-table cf-table--bordered cf-table--responsive extra"
>
  Table
</table>
`;

exports[`should render hover 1`] = `
<table
  className="cf-table cf-table--hover cf-table--bordered cf-table--responsive"
>
  Table
</table>
`;

exports[`should render not bordered 1`] = `
<table
  className="cf-table cf-table--responsive"
>
  Table
</table>
`;

exports[`should render striped 1`] = `
<table
  className="cf-table cf-table--striped cf-table--bordered cf-table--responsive"
>
  Table
</table>
`;
